--- a/index.html
+++ b/index.html
@@ -572,6 +572,9 @@
           <strong>Technologies Used:</strong> Arduino, IR Sensors, LDR Sensors<br>
           <strong>Contribution:</strong> Circuit design, coding, and testing.
         </p>
+        <a class="button" href="(FINAL)SMART HIGHWAY LIGHT WITH MOVEMENT DETECTOR USING ARDUINO.pdf" target="_blank">
+          <span>View Project Details</span>
+        </a>
       </div>
 
       <div class="project">
