--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
           <strong>Contribution:</strong> Circuit design, coding, and testing.
         </p>
         <a class="button" href="(FINAL)SMART HIGHWAY LIGHT WITH MOVEMENT DETECTOR USING ARDUINO.pdf" target="_blank">
-          <span>View Project Details</span>
+          <span>View Project Documentation</span>
         </a>
       </div>
 
