--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
     <section id="resume" class="fade-in">
       <h2>Resume</h2>
       <p>Download My Resume:</p>
-      <a class="button" href="SyedDanishAli_Resume.pdf" download>
+      <a class="button" href="Syed_Danish_Ali_Updated_Resume_July2025.pdf" download>
         <span>📄 Download Resume</span>
       </a>
     </section>
