--- a/index.html
+++ b/index.html
@@ -624,8 +624,7 @@
           <strong>Contribution:</strong> Game design (XP, leveling, quests, achievements), UI/UX, front-end implementation, and CI/CD to GitHub Pages.
         </p>
         <a class="button" href="https://github.com/danishsyed-dev/Life-RPG" target="_blank"> <span>View Repository</span> </a>
-        <a class="button" href="http://syeddanishali.me/Life-RPG/" target="_blank"> <span>Play Live</span>
-        </a>
+        <a class="button" href="http://syeddanishali.me/Life-RPG/" target="_blank"> <span>Play Live</span> </a>
       </div>
 
     </section>
