Update portfolio: Add live demo links for La Liga analysis project

--- a/index.html
+++ b/index.html
@@ -611,9 +611,8 @@
           <strong>Tech:</strong> Python, Pandas, Matplotlib<br>
           <strong>Contribution:</strong> Data Analysis, Data visualizations.<br>
         </p>
-        <a class="button" href="https://github.com/danishsyed-dev/la-liga-forwards-analysis" target="_blank">
-          <span>View Project Details</span>
-        </a>
+        <a class="button" href="https://github.com/danishsyed-dev/la-liga-forwards-analysis" target="_blank"> <span>View Repository</span> </a>
+        <a class="button" href="http://syeddanishali.me/la-liga-forwards-analysis" target="_blank"> <span>View Live</span> </a>
       </div>
 
       <div class="project">
