Update the Weather-Scraper Live URL

--- a/index.html
+++ b/index.html
@@ -599,8 +599,8 @@
           Built a responsive weather forecasting web app using OpenWeather API.<br>
           <strong>Technologies Used:</strong> HTML, CSS, JavaScript, PHP, API integration<br>
         </p>
-        <a class="button" href="https://github.com/danishsyed-dev/Weather-scraper" target="_blank">
-          <span>View Project Details</span>
+        <a class="button" href="https://github.com/danishsyed-dev/Weather-scraper" target="_blank"> <span>View Project Details</span>
+          <a class="button" href="http://syeddanishali.me/Weather-scraper/" target="_blank"> <span>Play Live</span> </a>
         </a>
       </div>
 
