--- a/index.html
+++ b/index.html
@@ -625,6 +625,15 @@
         <a class="button" href="http://syeddanishali.me/Life-RPG/" target="_blank"> <span>Play Live</span> </a>
       </div>
 
+      <div class="project">
+        <h3>Premier Leaguage 2025 Machine Learning Prediction</h3>
+        <p>
+          Developed a machine learning model to predict outcomes of Premier League matches using historical data.<br>
+          <strong>Technologies Used:</strong> Python, Scikit-Learn, Pandas, NumPy<br>
+          <strong>Contribution:</strong> Data collection, feature engineering, model training, and evaluation.
+        </p>
+        <a class="button" href="https://github.com/danishsyed-dev/PL25_Prediction_ML" target="_blank"> <span>View Project Details</span> </a>
+
     </section>
 
     <section id="resume" class="fade-in">
