Change my Mail address

--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
       <h2>Contact</h2>
       <ul class="social">
         <li data-tooltip="Email">
-          <a href="mailto:danishsyed237@gmail.com" aria-label="Email" style="--bg: linear-gradient(135deg, #c71610, #ff4444);">
+          <a href="mailto:knightdanish@gmail.com" aria-label="Email" style="--bg: linear-gradient(135deg, #c71610, #ff4444);">
             <i class="fa-solid fa-envelope"></i>
           </a>
         </li>
