Fix file paths: Update image and document links to match new folder structure

--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
 <body>
   <header class="fade-in">
     <div class="photo-container">
-      <img src="profile.jpg" alt="Syed Danish Ali">
+      <img src="assets/images/profile.jpg" alt="Syed Danish Ali">
     </div>
     <h1>Syed Danish Ali</h1>
     <p>AI/ML Enthusiast | Embedded Systems | Developer</p>
@@ -588,7 +588,7 @@
           <strong>Technologies Used:</strong> Arduino, IR Sensors, LDR Sensors<br>
           <strong>Contribution:</strong> Circuit design, coding, and testing.<br>
         </p>
-        <a class="button" href="(FINAL)SMART HIGHWAY LIGHT WITH MOVEMENT DETECTOR USING ARDUINO.pdf" target="_blank">
+        <a class="button" href="assets/documents/(FINAL)SMART HIGHWAY LIGHT WITH MOVEMENT DETECTOR USING ARDUINO.pdf" target="_blank">
           <span>View Project Details</span>
         </a>
       </div>
@@ -639,7 +639,7 @@
     <section id="resume" class="fade-in">
       <h2>Resume</h2>
       <p>Download My Resume:</p>
-      <a class="button" href="Syed_Danish_Ali_Updated_Resume_July2025.pdf" download>
+      <a class="button" href="assets/documents/Syed_Danish_Ali_Updated_Resume_July2025.pdf" download>
         <span>📄 Download Resume</span>
       </a>
     </section>
