--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
 
     .avatar {
       width: 120px;
-      height: 120px;
-      border-radius: 50%;
-      border: 2px solid var(--border-color);
+      height: 150px;
+      border-radius: 47%;
+      border: 2% solid var(--border-color);
       object-fit: cover;
       flex-shrink: 0;
     }
@@ -451,6 +451,183 @@
       transform: translateY(-1px);
     }
 
+    /* Resume Modal */
+    .modal-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.85);
+      backdrop-filter: blur(8px);
+      z-index: 9999;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      opacity: 0;
+      visibility: hidden;
+      transition: all 0.3s ease;
+    }
+
+    .modal-overlay.active {
+      opacity: 1;
+      visibility: visible;
+    }
+
+    .modal-container {
+      width: 90%;
+      max-width: 900px;
+      height: 85vh;
+      background: var(--bg-secondary);
+      border: 1px solid var(--border-color);
+      border-radius: 12px;
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      transform: scale(0.9) translateY(20px);
+      transition: transform 0.3s ease;
+    }
+
+    .modal-overlay.active .modal-container {
+      transform: scale(1) translateY(0);
+    }
+
+    .modal-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 16px 20px;
+      background: var(--bg-tertiary);
+      border-bottom: 1px solid var(--border-color);
+    }
+
+    .modal-title {
+      font-family: var(--mono-font);
+      font-size: 0.95rem;
+      color: var(--text-primary);
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .modal-title i {
+      color: var(--accent-green);
+    }
+
+    .modal-actions {
+      display: flex;
+      gap: 12px;
+      align-items: center;
+    }
+
+    .modal-btn {
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+      font-family: var(--mono-font);
+      font-size: 0.8rem;
+      padding: 8px 16px;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: 500;
+      transition: all 0.2s ease;
+      cursor: pointer;
+      border: none;
+    }
+
+    .modal-btn.download {
+      background: var(--accent-green);
+      color: var(--bg-primary);
+    }
+
+    .modal-btn.download:hover {
+      background: #2ea043;
+    }
+
+    .modal-btn.close {
+      background: var(--bg-tertiary);
+      color: var(--text-secondary);
+      border: 1px solid var(--border-color);
+    }
+
+    .modal-btn.close:hover {
+      background: var(--border-color);
+      color: var(--text-primary);
+    }
+
+    .modal-body {
+      flex: 1;
+      overflow: hidden;
+      position: relative;
+    }
+
+    .modal-body object,
+    .modal-body iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+      display: block;
+    }
+
+    .pdf-fallback {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
+      padding: 40px;
+      text-align: center;
+      background: var(--bg-primary);
+    }
+
+    .pdf-fallback i {
+      font-size: 4rem;
+      color: var(--accent-green);
+      margin-bottom: 20px;
+    }
+
+    .pdf-fallback h3 {
+      font-family: var(--mono-font);
+      font-size: 1.2rem;
+      color: var(--text-primary);
+      margin-bottom: 12px;
+    }
+
+    .pdf-fallback p {
+      color: var(--text-secondary);
+      margin-bottom: 24px;
+      max-width: 400px;
+    }
+
+    .pdf-fallback .fallback-actions {
+      display: flex;
+      gap: 12px;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    .pdf-fallback .modal-btn {
+      padding: 12px 24px;
+    }
+
+    @media (max-width: 600px) {
+      .modal-container {
+        width: 95%;
+        height: 90vh;
+      }
+
+      .modal-header {
+        flex-direction: column;
+        gap: 12px;
+        padding: 12px 16px;
+      }
+
+      .modal-actions {
+        width: 100%;
+        justify-content: space-between;
+      }
+    }
+
     /* Contact Section */
     .contact-grid {
       display: grid;
@@ -633,10 +810,10 @@
             <span class="role-tag ml"><i class="fa-solid fa-brain"></i> ML/AI</span>
           </div>
           <p class="bio">
-            Computer Science Engineering graduate specializing in <strong>AI & Machine Learning</strong>.
-            I build real-world solutions from cancer diagnosis models to IoT systems.
-            Experience includes academic research, virtual internships at <strong>Deloitte</strong> and <strong>British
-              Airways</strong>.
+            <strong>AI & Machine Learning</strong> graduate focused on ML, NLP, Information Retrieval, and
+            Learning-to-Rank research.
+            Built real-world systems ranging from cancer prediction models to ML-based ranking engines.
+            Seeking research-oriented graduate and assistantship opportunities.
           </p>
           <div class="header-links">
             <a href="mailto:danishsyed237@gmail.com"><i class="fa-solid fa-envelope"></i> danishsyed237@gmail.com</a>
@@ -888,11 +1065,12 @@
         <h2>Resume</h2>
       </div>
       <div class="resume-box">
-        <p class="resume-text">Looking for a detailed overview? Download my latest resume.</p>
-        <a href="assets/documents/Syed_Danish_Ali_Updated_Resume_July2025.pdf" download class="resume-btn">
-          <i class="fa-solid fa-download"></i> Download Resume
-        </a>
+        <p class="resume-text">Looking for a detailed overview? Preview and download my resume.</p>
+        <button class="resume-btn" id="openResumeModal">
+          <i class="fa-solid fa-eye"></i> View Resume
+        </button>
       </div>
+
     </section>
 
     <!-- Contact -->
@@ -925,6 +1103,43 @@
         <span>Available for opportunities</span>
       </div>
     </footer>
+  </div>
+
+  <!-- Resume Modal (placed at root level for proper z-index) -->
+  <div class="modal-overlay" id="resumeModal">
+    <div class="modal-container">
+      <div class="modal-header">
+        <div class="modal-title">
+          <i class="fa-solid fa-file-pdf"></i>
+          <span>Syed_Danish_Ali_Resume.pdf</span>
+        </div>
+        <div class="modal-actions">
+          <a href="assets/documents/Syed_Danish_Ali_Resume.pdf" download class="modal-btn download">
+            <i class="fa-solid fa-download"></i> Download
+          </a>
+          <button class="modal-btn close" id="closeResumeModal">
+            <i class="fa-solid fa-times"></i> Close
+          </button>
+        </div>
+      </div>
+      <div class="modal-body">
+        <object data="assets/documents/Syed_Danish_Ali_Resume.pdf" type="application/pdf" width="100%" height="100%">
+          <div class="pdf-fallback">
+            <i class="fa-solid fa-file-pdf"></i>
+            <h3>PDF Preview Unavailable</h3>
+            <p>Your browser cannot display PDFs inline when viewing locally. Please use one of the options below:</p>
+            <div class="fallback-actions">
+              <a href="assets/documents/Syed_Danish_Ali_Resume.pdf" target="_blank" class="modal-btn download">
+                <i class="fa-solid fa-external-link"></i> Open in New Tab
+              </a>
+              <a href="assets/documents/Syed_Danish_Ali_Resume.pdf" download class="modal-btn download">
+                <i class="fa-solid fa-download"></i> Download PDF
+              </a>
+            </div>
+          </div>
+        </object>
+      </div>
+    </div>
   </div>
 
   <script>
@@ -962,6 +1177,37 @@
 
     // Scroll to top on load
     window.onload = () => window.scrollTo(0, 0);
+
+    // Resume Modal Functionality
+    const resumeModal = document.getElementById('resumeModal');
+    const openModalBtn = document.getElementById('openResumeModal');
+    const closeModalBtn = document.getElementById('closeResumeModal');
+
+    openModalBtn.addEventListener('click', () => {
+      resumeModal.classList.add('active');
+      document.body.style.overflow = 'hidden';
+    });
+
+    closeModalBtn.addEventListener('click', () => {
+      resumeModal.classList.remove('active');
+      document.body.style.overflow = '';
+    });
+
+    // Close modal when clicking outside
+    resumeModal.addEventListener('click', (e) => {
+      if (e.target === resumeModal) {
+        resumeModal.classList.remove('active');
+        document.body.style.overflow = '';
+      }
+    });
+
+    // Close modal with Escape key
+    document.addEventListener('keydown', (e) => {
+      if (e.key === 'Escape' && resumeModal.classList.contains('active')) {
+        resumeModal.classList.remove('active');
+        document.body.style.overflow = '';
+      }
+    });
   </script>
 </body>
 
