feat: Add GitHub repository link for Streaming Text Trend Analysis project.

--- a/index.html
+++ b/index.html
@@ -966,7 +966,10 @@
         <article class="project-item">
           <div class="project-header">
             <h3 class="project-title">Streaming Text Trend Analysis</h3>
-            <div class="project-links"></div>
+            <div class="project-links">
+              <a href="https://github.com/danishsyed-dev/Identifying_Hot_Topic_Trends" target="_blank"
+                title="View Repository"><i class="fa-brands fa-github"></i></a>
+            </div>
           </div>
           <p class="project-desc">NLP model to detect and visualize trending topics from real-time text streams using a
             sequential approach.</p>
