Add RAG API Using FastAPI project to portfolio
Added a new project entry for a FastAPI-based RAG API utilizing TinyLlama and ChromaDB. Includes project description, technologies used, and a link to the GitHub repository.

--- a/index.html
+++ b/index.html
@@ -1095,6 +1095,24 @@
 
         <article class="project-item">
           <div class="project-header">
+            <h3 class="project-title">RAG API Using FastAPI</h3>
+            <div class="project-links">
+              <a href="http://github.com/danishsyed-dev/RAG-API/" target="_blank" title="View Repository"><i
+                  class="fa-solid fa-file-pdf"></i></a>
+            </div>
+          </div>
+          <p class="project-desc">FastAPI-based RAG API using ollama's TinyLlama and Chromadb for generating responses
+            to user queries.</p>
+          <div class="project-tech">
+            <span class="tech-tag">FastAPI</span>
+            <span class="tech-tag">ChromaDB</span>
+            <span class="tech-tag">TinyLlama</span>
+            <span class="tech-tag">Python 3.9+</span>
+          </div>
+        </article>
+
+        <article class="project-item">
+          <div class="project-header">
             <h3 class="project-title">La Liga Forwards Analysis</h3>
             <div class="project-links">
               <a href="https://github.com/danishsyed-dev/la-liga-forwards-analysis" target="_blank"
