Fix GitHub icon for RAG API project link
Replaced the PDF icon with the correct GitHub icon for the RAG API Using FastAPI project link to better represent the repository link.

--- a/index.html
+++ b/index.html
@@ -1098,7 +1098,7 @@
             <h3 class="project-title">RAG API Using FastAPI</h3>
             <div class="project-links">
               <a href="http://github.com/danishsyed-dev/RAG-API/" target="_blank" title="View Repository"><i
-                  class="fa-solid fa-file-pdf"></i></a>
+                  class="fa-brands fa-github"></i></a>
             </div>
           </div>
           <p class="project-desc">FastAPI-based RAG API using ollama's TinyLlama and Chromadb for generating responses
