Add ORCID profile link to contact section
Introduced an ORCID link with icon alongside existing GitHub and LinkedIn links in the contact section of index.html for improved professional profile visibility.

--- a/index.html
+++ b/index.html
@@ -932,6 +932,11 @@
             <a href="https://github.com/danishsyed-dev" target="_blank"><i class="fa-brands fa-github"></i> GitHub</a>
             <a href="https://www.linkedin.com/in/syed-danish-ali-70b36334a/" target="_blank"><i
                 class="fa-brands fa-linkedin"></i> LinkedIn</a>
+            <a id="cy-effective-orcid-url" href="https://orcid.org/0009-0000-3010-0027" target="orcid.widget"
+              rel="me noopener noreferrer" style="vertical-align: top">
+              <img src="https://orcid.org/sites/default/files/images/orcid_16x16.png"
+                style="width: 1em; margin-inline-start: 0.5em" alt="ORCID iD icon" />
+              ORCID</a>
           </div>
         </div>
       </div>
