Add new projects and update project list layout
Added several new project entries including Silver Price Prediction Model, ML Sales Prediction, Meme Matcher, and a language model fine-tuning project. Also moved the RAG API project to a new position in the list and removed its duplicate entry to improve organization and showcase recent work.

--- a/index.html
+++ b/index.html
@@ -1046,6 +1046,111 @@
 
         <article class="project-item">
           <div class="project-header">
+            <h3 class="project-title">Silver Price Prediction Model</h3>
+            <div class="project-links">
+              <a href="http://github.com/danishsyed-dev/Silver-Price-Prediction/" target="_blank"
+                title="View Repository"><i class="fa-brands fa-github"></i></a>
+              <a href="https://danishali11903-silver-price-prediction.hf.space/" target="_blank" title="View App"><i
+                  class="fa-solid fa-external-link"></i></a>
+            </div>
+          </div>
+          <p class="project-desc">An end-to-end machine learning project to predict silver prices for the Indian market.
+          </p>
+          <div class="project-tech">
+            <span class="tech-tag">Python</span>
+            <span class="tech-tag">Pandas</span>
+            <span class="tech-tag">scikit-learn</span>
+            <span class="tech-tag">Flask</span>
+            <span class="tech-tag">REST API</span>
+            <span class="tech-tag">ML Model</span>
+          </div>
+        </article>
+
+        <article class="project-item">
+          <div class="project-header">
+            <h3 class="project-title">RAG API Using FastAPI</h3>
+            <div class="project-links">
+              <a href="http://github.com/danishsyed-dev/RAG-API/" target="_blank" title="View Repository"><i
+                  class="fa-brands fa-github"></i></a>
+            </div>
+          </div>
+          <p class="project-desc">FastAPI-based RAG API using ollama's TinyLlama and Chromadb for generating responses
+            to user queries.</p>
+          <div class="project-tech">
+            <span class="tech-tag">FastAPI</span>
+            <span class="tech-tag">ChromaDB</span>
+            <span class="tech-tag">TinyLlama</span>
+            <span class="tech-tag">Python 3.9+</span>
+          </div>
+        </article>
+
+        <article class="project-item">
+          <div class="project-header">
+            <h3 class="project-title">ML Sales Prediction</h3>
+            <div class="project-links">
+              <a href="http://github.com/danishsyed-dev/ml-sales-prediction/" target="_blank" title="View Repository"><i
+                  class="fa-brands fa-github"></i></a>
+            </div>
+          </div>
+          <p class="project-desc">A dynamic pricing system for an online retailer using predictions served by ML models:
+            A multi-layered Feedforward Neural Network, A Light GBM regressor and An Elastic Net, hosted on the
+            containerized serverless architecture.</p>
+          <div class="project-tech">
+            <span class="tech-tag">Python</span>
+            <span class="tech-tag">Pandas</span>
+            <span class="tech-tag">hashlib</span>
+            <span class="tech-tag">Flask</span>
+            <span class="tech-tag">NumPy</span>
+          </div>
+        </article>
+
+        <article class="project-item">
+          <div class="project-header">
+            <h3 class="project-title">Meme Matcher - Real-time Facial Expression to Meme Matching</h3>
+            <div class="project-links">
+              <a href="http://github.com/danishsyed-dev/Meme-Matcher/" target="_blank" title="View Repository"><i
+                  class="fa-brands fa-github"></i></a>
+            </div>
+          </div>
+          <p class="project-desc">A real-time computer vision application that matches your facial expressions and hand
+            gestures to iconic internet memes using MediaPipe's AI-powered face and hand detection.</p>
+          <div class="project-tech">
+            <span class="tech-tag">Python</span>
+            <span class="tech-tag">NumPy</span>
+            <span class="tech-tag">Pathlib</span>
+            <span class="tech-tag">Tkinter</span>
+            <span class="tech-tag">OpenCV</span>
+            <span class="tech-tag">MediaPipe</span>
+          </div>
+        </article>
+
+        <article class="project-item">
+          <div class="project-header">
+            <h3 class="project-title">Fully Fine-Tune a Small Language Model (Gemma 3 270M)</h3>
+            <div class="project-links">
+              <a href="http://github.com/danishsyed-dev/NVIDIA-DGX-Spark-hugging_face_llm_full_fine_tune_tutorial-VIDEO/"
+                target="_blank" title="View Repository"><i class="fa-brands fa-github"></i></a>
+              <a href="https://huggingface.co/spaces/danishali11903/FoodExtract-v1" target="_blank"
+                title="View Hugging Face Space"><i class="fa-brands fa-huggingface"></i></a>
+            </div>
+          </div>
+          <p class="project-desc">Supervised Fine-Tuning (SFT) of a Small Language Model (SLM) for a specific task:
+            extracting food and drink items from text. The fine-tuned model can process text inputs and return
+            structured data about food/drink content.</p>
+          <div class="project-tech">
+            <span class="tech-tag">Python</span>
+            <span class="tech-tag">Pandas</span>
+            <span class="tech-tag">NumPy</span>
+            <span class="tech-tag">transformers</span>
+            <span class="tech-tag">gradio</span>
+            <span class="tech-tag">DataSets</span>
+            <span class="tech-tag">trl</span>
+            <span class="tech-tag">hugging_face</span>
+          </div>
+        </article>
+
+        <article class="project-item">
+          <div class="project-header">
             <h3 class="project-title">ML Models for Cancer Prediction</h3>
             <div class="project-links">
               <a href="https://ijitce.org/index.php/ijitce/article/view/1161" target="_blank"
@@ -1095,24 +1200,6 @@
             <span class="tech-tag">Python</span>
             <span class="tech-tag">NLP</span>
             <span class="tech-tag">Data Preprocessing</span>
-          </div>
-        </article>
-
-        <article class="project-item">
-          <div class="project-header">
-            <h3 class="project-title">RAG API Using FastAPI</h3>
-            <div class="project-links">
-              <a href="http://github.com/danishsyed-dev/RAG-API/" target="_blank" title="View Repository"><i
-                  class="fa-brands fa-github"></i></a>
-            </div>
-          </div>
-          <p class="project-desc">FastAPI-based RAG API using ollama's TinyLlama and Chromadb for generating responses
-            to user queries.</p>
-          <div class="project-tech">
-            <span class="tech-tag">FastAPI</span>
-            <span class="tech-tag">ChromaDB</span>
-            <span class="tech-tag">TinyLlama</span>
-            <span class="tech-tag">Python 3.9+</span>
           </div>
         </article>
 
