--- a/index.html
+++ b/index.html
@@ -452,8 +452,8 @@
          ================================ -->
     <section id="blog" class="section fade-in">
       <div class="section-header">
-        <i class="fa-solid fa-pen-nib section-icon"></i>
-        <h2>Blog</h2>
+        <i class="fa-solid fa-newspaper section-icon"></i>
+        <h2>Blogs</h2>
       </div>
       <div class="blog-list">
 
@@ -468,11 +468,11 @@
           </div>
           <p class="blog-desc">A deep dive into building a production-ready Retrieval-Augmented Generation system,
             using Hugging Face and FastAPI.</p>
-          <div class="blog-tech">
-            <span class="tech-tag">Hugging Face</span>
-            <span class="tech-tag">FastAPI</span>
-            <span class="tech-tag">Python</span>
-            <span class="tech-tag">Machine Learning</span>
+          <div class="blog-tags">
+            <span class="blog-tag">Hugging Face</span>
+            <span class="blog-tag">FastAPI</span>
+            <span class="blog-tag">Python</span>
+            <span class="blog-tag">Machine Learning</span>
           </div>
         </article>
 
@@ -566,7 +566,7 @@
          FOOTER
          ================================ -->
     <footer class="footer">
-      <p>&copy; 2025 Syed Danish Ali.</p>
+      <p>&copy; 2026 Syed Danish Ali.</p>
       <div class="footer-status">
         <span class="status-dot"></span>
         <span>Available for opportunities</span>
@@ -583,10 +583,10 @@
       <div class="modal-header">
         <div class="modal-title">
           <i class="fa-solid fa-file-pdf"></i>
-          <span>Syed_Danish_Ali_Resume.pdf</span>
+          <span>Syed_Danish_Ali_Unstop_Feb2025_Resume.pdf</span>
         </div>
         <div class="modal-actions">
-          <a href="assets/documents/Syed_Danish_Ali_Resume.pdf" download class="modal-btn download">
+          <a href="assets/documents/Syed_Danish_Ali_Unstop_Feb2025_Resume.pdf" download class="modal-btn download">
             <i class="fa-solid fa-download"></i> Download
           </a>
           <button class="modal-btn close" id="closeResumeModal">
@@ -595,16 +595,18 @@
         </div>
       </div>
       <div class="modal-body">
-        <object data="assets/documents/Syed_Danish_Ali_Resume.pdf" type="application/pdf" width="100%" height="100%">
+        <object data="assets/documents/Syed_Danish_Ali_Unstop_Feb2025_Resume.pdf" type="application/pdf" width="100%"
+          height="100%">
           <div class="pdf-fallback">
             <i class="fa-solid fa-file-pdf"></i>
             <h3>PDF Preview Unavailable</h3>
             <p>Your browser cannot display PDFs inline when viewing locally. Please use one of the options below:</p>
             <div class="fallback-actions">
-              <a href="assets/documents/Syed_Danish_Ali_Resume.pdf" target="_blank" class="modal-btn download">
+              <a href="assets/documents/Syed_Danish_Ali_Unstop_Feb2025_Resume.pdf" target="_blank"
+                class="modal-btn download">
                 <i class="fa-solid fa-external-link"></i> Open in New Tab
               </a>
-              <a href="assets/documents/Syed_Danish_Ali_Resume.pdf" download class="modal-btn download">
+              <a href="assets/documents/Syed_Danish_Ali_Unstop_Feb2025_Resume.pdf" download class="modal-btn download">
                 <i class="fa-solid fa-download"></i> Download PDF
               </a>
             </div>
