chore: Simplify resume file name display in the resume modal.

--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
       <div class="modal-header">
         <div class="modal-title">
           <i class="fa-solid fa-file-pdf"></i>
-          <span>Syed_Danish_Ali_Unstop_Feb2025_Resume.pdf</span>
+          <span>Syed_Danish_Ali_Resume.pdf</span>
         </div>
         <div class="modal-actions">
           <a href="assets/documents/Syed_Danish_Ali_Unstop_Feb2025_Resume.pdf" download class="modal-btn download">
