feat: specify filename for resume PDF downloads

--- a/index.html
+++ b/index.html
@@ -586,7 +586,8 @@
           <span>Syed_Danish_Ali_Resume.pdf</span>
         </div>
         <div class="modal-actions">
-          <a href="assets/documents/Syed_Danish_Ali_Unstop_Feb2025_Resume.pdf" download class="modal-btn download">
+          <a href="assets/documents/Syed_Danish_Ali_Unstop_Feb2025_Resume.pdf" download="Syed Danish Ali Resume.pdf"
+            class="modal-btn download">
             <i class="fa-solid fa-download"></i> Download
           </a>
           <button class="modal-btn close" id="closeResumeModal">
@@ -606,7 +607,8 @@
                 class="modal-btn download">
                 <i class="fa-solid fa-external-link"></i> Open in New Tab
               </a>
-              <a href="assets/documents/Syed_Danish_Ali_Unstop_Feb2025_Resume.pdf" download class="modal-btn download">
+              <a href="assets/documents/Syed_Danish_Ali_Unstop_Feb2025_Resume.pdf" download="Syed Danish Ali Resume.pdf"
+                class="modal-btn download">
                 <i class="fa-solid fa-download"></i> Download PDF
               </a>
             </div>
