--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
           </div>
         </div>
       </div>
+      <!-- Mobile scroll indicator -->
+      <div class="scroll-indicator">
+        <span>Scroll Down</span>
+        <i class="fa-solid fa-chevron-down"></i>
+      </div>
     </header>
 
     <!-- ================================
