feat: Add Housing Price Prediction System project to portfolio.

--- a/index.html
+++ b/index.html
@@ -184,6 +184,32 @@
       </div>
       <div class="projects-list">
 
+        <!-- Project: Housing Price Prediction System-->
+        <article class="project-item">
+          <div class="project-header">
+            <h3 class="project-title">Housing Price Prediction System</h3>
+            <div class="project-links">
+              <a href="http://github.com/danishsyed-dev/Housing-Price-Prediction-System/" target="_blank"
+                title="View Repository"><i class="fa-brands fa-github"></i></a>
+              <!-- <a href="https://danishali11903-housing-price-prediction-system.hf.space/" target="_blank"
+                title="View App"><i class="fa-solid fa-external-link"></i></a> -->
+            </div>
+          </div>
+          <p class="project-desc">An End-to-End Machine Learning pipeline for price prediction, built using ZenML and
+            MLflow.
+          </p>
+          <div class="project-tech">
+            <span class="tech-tag">Python</span>
+            <span class="tech-tag">Pandas</span>
+            <span class="tech-tag">scikit-learn</span>
+            <span class="tech-tag">ZenML</span>
+            <span class="tech-tag">MLflow</span>
+            <span class="tech-tag">pytest</span>
+            <span class="tech-tag">Seaborn</span>
+            <span class="tech-tag">Matplotlib</span>
+          </div>
+        </article>
+
         <!-- Project: Silver Price Prediction -->
         <article class="project-item">
           <div class="project-header">
