feat: add new blog post for dynamic pricing ML system to the portfolio website.

--- a/index.html
+++ b/index.html
@@ -483,6 +483,29 @@
       </div>
       <div class="blog-list">
 
+        <!-- Blog: Housing Price Prediction System -->
+        <article class="blog-item">
+          <div class="blog-header">
+            <h3 class="blog-title">How I Built a Dynamic Pricing ML System</h3>
+            <div class="blog-links">
+              <a href="https://syeddanishali.me/my-blog/blog/dynamic-pricing-ml-system/" target="_blank"
+                title="Read Article"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            </div>
+          </div>
+          <p class="blog-desc">An End-to-End Machine Learning pipeline for price prediction, built using ZenML and
+            MLflow.</p>
+          <div class="blog-tags">
+            <span class="blog-tag">Python</span>
+            <span class="blog-tag">Pandas</span>
+            <span class="blog-tag">scikit-learn</span>
+            <span class="blog-tag">ZenML</span>
+            <span class="blog-tag">MLflow</span>
+            <span class="blog-tag">pytest</span>
+            <span class="blog-tag">Seaborn</span>
+            <span class="blog-tag">Matplotlib</span>
+          </div>
+        </article>
+
         <!-- Blog: Food Extractor -->
         <article class="blog-item">
           <div class="blog-header">
