--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     rel="stylesheet">
 
   <!-- Custom Stylesheet -->
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="css/styles.css?v=1.1" />
 </head>
 
 <body>
