Replace em dashes and update blog tag classes
Normalize punctuation in project/blog descriptions by replacing em-dashes with spaced hyphens for clearer text flow, and rename CSS classes in the blog tech section from `tech-tag` to `blog-tag` to reflect semantics/targeted styling.

--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
             </div>
           </div>
           <p class="project-desc">
-            A Node.js-based CLI tool that captures and persists structured AI coding context—reasoning, decisions, and
-            task state—alongside Git branches. It enables seamless continuation of AI-assisted development across
+            A Node.js-based CLI tool that captures and persists structured AI coding context-reasoning, decisions, and
+            task state - alongside Git branches. It enables seamless continuation of AI-assisted development across
             sessions, IDEs, and devices without re-explaining project architecture or progress.
           </p>
           <div class="project-tech">
@@ -516,15 +516,16 @@
           </div>
           <p class="blog-desc">
             A practical guide to building RelayContext, a Node.js CLI tool that captures and persists structured AI
-            coding context—reasoning, decisions, and task state—alongside Git branches. Learn how it enables seamless
+            coding context - reasoning, decisions, and task state - alongside Git branches. Learn how it enables
+            seamless
             continuation of AI-assisted development across sessions, IDEs, and devices without re-explaining project
             architecture or progress.
           </p>
           <div class="blog-tech">
-            <span class="tech-tag">Node.js</span>
-            <span class="tech-tag">CLI Development</span>
-            <span class="tech-tag">Git Integration</span>
-            <span class="tech-tag">Developer Productivity</span>
+            <span class="blog-tag">Node.js</span>
+            <span class="blog-tag">CLI Development</span>
+            <span class="blog-tag">Git Integration</span>
+            <span class="blog-tag">Developer Productivity</span>
           </div>
         </article>
 
