feat: add InComeIQ and RelayContext projects and their corresponding blog posts to the portfolio.

--- a/index.html
+++ b/index.html
@@ -184,6 +184,51 @@
       </div>
       <div class="projects-list">
 
+        <!-- Project: ML Income Predictor-->
+        <article class="project-item">
+          <div class="project-header">
+            <h3 class="project-title">InComeIQ: ML Income Predictor</h3>
+            <div class="project-links">
+              <a href="https://github.com/danishsyed-dev/InComeIQ" target="_blank" title="View Repository"><i
+                  class="fa-brands fa-github"></i></a>
+            </div>
+          </div>
+          <p class="project-desc">A production-ready Machine Learning pipeline and web application for demographic
+            income classification. Features an object-oriented training pipeline, REST APIs, and dynamic feature
+            explainability.</p>
+          <div class="project-tech">
+            <span class="tech-tag">Scikit-Learn</span>
+            <span class="tech-tag">XGBoost</span>
+            <span class="tech-tag">Pandas</span>
+            <span class="tech-tag">Flask</span>
+            <span class="tech-tag">SQLAlchemy</span>
+            <span class="tech-tag">Docker</span>
+            <span class="tech-tag">Matplotlib</span>
+            <span class="tech-tag">HTML/CSS</span>
+          </div>
+        </article>
+
+        <!-- Project: RelayContext-->
+        <article class="project-item">
+          <div class="project-header">
+            <h3 class="project-title">RelayContext: AI Coding Context CLI</h3>
+            <div class="project-links">
+              <a href="https://github.com/danishsyed-dev/RelayContext" target="_blank" title="View Repository"><i
+                  class="fa-brands fa-github"></i></a>
+            </div>
+          </div>
+          <p class="project-desc">A Node.js-based CLI tool that captures and persists structured AI coding context
+            alongside Git branches. Enables seamless continuation of AI-assisted development across sessions and IDEs.
+          </p>
+          <div class="project-tech">
+            <span class="tech-tag">Node.js</span>
+            <span class="tech-tag">NPM Module</span>
+            <span class="tech-tag">CLI</span>
+            <span class="tech-tag">Git Integration</span>
+            <span class="tech-tag">JSON</span>
+          </div>
+        </article>
+
         <!-- Project: Housing Price Prediction System-->
         <article class="project-item">
           <div class="project-header">
@@ -482,6 +527,46 @@
         <h2>Blogs</h2>
       </div>
       <div class="blog-list">
+
+        <!-- Blog: InComeIQ -->
+        <article class="blog-item">
+          <div class="blog-header">
+            <h3 class="blog-title">Building a Production-Ready ML Pipeline: The ML Income Predictor</h3>
+            <div class="blog-links">
+              <a href="https://syeddanishali.me/my-blog/blog/ml-income-predictor/" target="_blank"
+                title="Read Article"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            </div>
+          </div>
+          <p class="blog-desc">A deep dive into transitioning from a basic Jupyter Notebook to a fully object-oriented,
+            production-ready Machine Learning pipeline and web application for demographic income classification.</p>
+          <div class="blog-tags">
+            <span class="blog-tag">Machine Learning</span>
+            <span class="blog-tag">XGBoost</span>
+            <span class="blog-tag">Python</span>
+            <span class="blog-tag">Flask</span>
+            <span class="blog-tag">Data Engineering</span>
+            <span class="blog-tag">Sklearn</span>
+          </div>
+        </article>
+
+        <!-- Blog: RelayContext -->
+        <article class="blog-item">
+          <div class="blog-header">
+            <h3 class="blog-title">RelayContext: A CLI Tool for AI Coding Context Persistence</h3>
+            <div class="blog-links">
+              <a href="https://syeddanishali.me/my-blog/blog/relaycontext-ai-coding-context/" target="_blank"
+                title="Read Article"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            </div>
+          </div>
+          <p class="blog-desc">A practical guide to building RelayContext, a Node.js CLI tool that captures and persists
+            structured AI coding context — reasoning, decisions, and task state — alongside Git branches.</p>
+          <div class="blog-tags">
+            <span class="blog-tag">Node.js</span>
+            <span class="blog-tag">CLI Development</span>
+            <span class="blog-tag">Git Integration</span>
+            <span class="blog-tag">Developer Productivity</span>
+          </div>
+        </article>
 
         <!-- Blog: Housing Price Prediction System -->
         <article class="blog-item">
